# schedule-builder-backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .~lock.xlsx.xlsx#  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  a.py  docker-compose-prod.yml  docker-compose.yaml  docker-compose.yml  entrypoint.sh  nginx.conf  profile.html  pyproject.toml  rooms.yaml  settings.example.yaml  settings.schema.yaml  settings.yaml  teacher_assistants.yaml  teachers.yaml
.github/ISSUE_TEMPLATE/: bug-report-template.md  technical-task-template.md
.github/workflows/: docker-image.yml  generate-changelog.yml  pre-commit.yaml  test-and-build.yml  test.yaml
data/: options.json
docs/architecture/: architecture.md
docs/architecture/deployment-view/: deployment-view.md
docs/architecture/dynamic-view/: dynamic-view.md  sequenceDiagram.mmd
docs/architecture/static-view/: static-view.md
docs/automation/: continuous-delivery.md  continuous-integration.md
docs/customer/: contributions-guide.md  project-structure-tree.md
docs/development/: gitChart.mmd
docs/quality-assurance/: automated-tests.md  quality-attribute-scenarios.md  user-acceptance-tests.md
docs/reports/: ai-usage.md  transition-report.md
scripts/: generate_settings_schema.py
src/: config.py  config_schema.py  custom_pydantic.py  logging_.py  prepare.py  utcnow.py  utils.py
src/api/: __main__.py  app.py  auth.py  dependencies.py  docs.py
src/application/use_cases/: collisions.py  teacher_assistant_manager.py
src/core_courses/: location_parser.py  parser.py
src/domain/: enums.py
src/domain/dtos/: booking.py  collisions.py  lesson.py  room.py  teacher.py  users.py
src/domain/dtos/collisions/: collisions.py
src/domain/exceptions/: base.py  room.py  tokens.py
src/domain/interfaces/: graph.py  parser.py  teacher_assistant_manager.py
src/electives/: parser.py
src/infrastructure/services/: collisions_checker.py
src/modules/bookings/: client.py  routes.py
src/modules/collisions/: collision_checker.py  core_courses_adapter.py  electives_adapter.py  graph.py  routes.py  schemas.py
src/modules/options/: repository.py  routes.py
src/modules/parser/: routes.py
src/modules/parsers/: schemas.py  utils.py
src/modules/room_booking/: repository.py  routes.py  schemas.py
src/parsers/: config_base.py  innohassle.py  utils.py
src/parsers/core_courses/: config.json  config.py  location_parser.py  parser.py
src/parsers/electives/: config.py  models.py  parser.py
src/presentation/: __main__.py  app.py  main.py
src/presentation/dependencies/: __init__.py  graph.py  parsers.py  rooms.py  taprovider.py  teacher.py
src/presentation/routes/: bookings.py  collisions.py
tests/: conftest.py  test_app.py  test_collisions.py
tests/fixtures/: app.py  collisions.py  container.py
tests/integration/: conftest.py  test_excel_collisions.py
tests/mocks/: booking.py
tests/unit/: conftest.py
tests/unit/collisions/: conftest.py  test_collisions.py
(+24 files in other folders)
