[project]
name = "schedule-builder-backend"
version = "0.1.0"
description = ""
authors = [{ name = "one-zero-eight" }]
urls = { homepage = "https://t.me/one_zero_eight" }
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "asyncpg>=0.30.0",
    "authlib>=1.6.5",
    "colorlog>=6.9.0",
    "fastapi>=0.115.12",
    "numpy>=2.3.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "fastapi-swagger>=0.2.19",
    "pydantic-settings>=2.9.1",
    "pydantic[email]>=2.11.5",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "uvicorn>=0.34.2",
    "httpx>=0.28.1",
    "gunicorn>=23.0.0",
    "python-multipart>=0.0.20",
]

[dependency-groups]
dev = [
    "ruff>=0.12.2",
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
]

[tool.ruff]
line-length = 120
lint.extend-select = ["I", "UP", "PL"]
lint.extend-ignore = ["PLC0415", "PLR"]
target-version = "py313"

[tool.coverage.run]
omit = [
    "src/prepare.py",
    "src/api/__main__.py",
]
