[project]
name = "schedule-builder-backend"
version = "0.1.0"
description = ""
authors = [{ name = "one-zero-eight" }]
urls = { homepage = "https://t.me/one_zero_eight" }
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "joserfc>=1.6.5",
    "colorlog>=6.10.1",
    "fastapi>=0.136.1",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "fastapi-swagger>=0.4.49",
    "pydantic-settings>=2.14.0",
    "pydantic[email]>=2.13.4",
    "pytz>=2026.2",
    "pyyaml>=6.0.3",
    "uvicorn>=0.46.0",
    "httpx>=0.28.1",
    "gunicorn>=26.0.0",
    "python-multipart>=0.0.27",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "prek>=0.3.13",
]

[tool.ruff]
line-length = 120
lint.extend-select = ["I", "UP", "PL"]
lint.extend-ignore = ["PLC0415", "PLR"]
target-version = "py313"

[tool.coverage.run]
omit = [
    "src/prepare.py",
    "src/api/__main__.py",
]
